<resources>
    <string name="app_name">PrimeiroProjeto</string>
    <string name="content_balanca"> Imagem de um balança</string>
    <string name="calculadora_imc">Calculadora IMC</string>
    <string name="hint_peso">Seu Peso em kg</string>
    <string name="hint_altura">Sua Altura em m</string>
    <string name="hint_edit_peso">Exemplo: 1.7 Kg</string>
    <string name="hint_edit_altura">Exemplo: 1.8 m</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="label_titulo_resultado">Seu IMC é:</string>
    <string name="label_rodape">Desenvolvido por: @jafferveronezi</string>
    <string name="label_peso_ideal">Peso ideal:</string>
    <string name="label_magreza">Magreza</string>
    <string name="label_ideal">Ideal</string>
    <string name="label_abaixo">Abaixo</string>
    <string name="label_obesidade1">Obesidade 1</string>
    <string name="label_obesidade2">Obesidade 2</string>
    <string name="label_obesidade3">Obesidade 3</string>
    <string name="label_sobre">Sobrepeso</string>
</resources>
